--- a/src/ratpack/public/views/queue/queue.html
+++ b/src/ratpack/public/views/queue/queue.html
@@ -1,24 +1,39 @@
 <div class="row">
-  <form ng-submit="queueCtrl.submitRequest()" class="form-horizontal col-sm-6" role="form" name="requestForm">
-    <div class="form-group">
-      <label for="username">Submitter name:</label>
-      <input type="text" id="username" class="form-control" ng-model="queueCtrl.userName" title="Submitter name" placeholder="Enter your name" required/>
+  <div class="col-sm-6">
+    <div class="panel panel-red margin-bottom-40">
+      <div class="panel-heading">
+        <h3 class="panel-title">Submit your solution details</h3>
+      </div>
+      <div class="panel-body">
+        <form ng-submit="queueCtrl.submitRequest()" class="margin-bottom-40" role="form" name="requestForm">
+          <div class="form-group">
+            <label for="username">Submitter name:</label>
+            <input type="text" id="username" class="form-control" ng-model="queueCtrl.userName" title="Submitter name" placeholder="Enter your name" required/>
+          </div>
+          <div class="form-group">
+            <label for="host" class="control-label">Host:</label>
+            <input type="text" id="host" class="form-control" ng-model="queueCtrl.solutionHostName" title="Host name" placeholder="Enter host to test against" required/>
+          </div>
+          <button type="submit" class="btn-u btn-u-red">Send</button>
+        </form>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="host" class="control-label">Host:</label>
-      <input type="text" id="host" class="form-control" ng-model="queueCtrl.solutionHostName" title="Host name" placeholder="Enter host to test against" required/>
-    </div>
-    <button type="submit" class="btn btn-lg btn-primary btn-block">Send</button>
-  </form>
+  </div>
 </div>
 <div class="row">
-  <h2>Queue</h2>
-  <table class="table table-striped table-bordered table-hover">
-    <tr ng-repeat="request in queueCtrl.requests">
-      <td>{{request.userName}} @ {{request.solutionHostName}}</td>
-    </tr>
-    <tr ng-hide="queueCtrl.requests.length">
-      <td>Empty queue</td>
-    </tr>
-  </table>
+  <div class="col-sm-6">
+    <h2>Processing queue</h2>
+    <table class="table table-striped table-bordered table-hover">
+      <tr ng-repeat="request in queueCtrl.requests">
+        <td>
+          <span ng-show="request.processing">Processing:</span>
+          <span ng-hide="request.processing">Waiting:</span>
+          <strong>{{request.userName}}</strong> @ {{request.solutionHostName}}
+        </td>
+      </tr>
+      <tr ng-hide="queueCtrl.requests.length">
+        <td>Empty queue</td>
+      </tr>
+    </table>
+  </div>
 </div>
