--- a/src/ratpack/public/views/results/results.html
+++ b/src/ratpack/public/views/results/results.html
@@ -11,7 +11,17 @@
     <h2>Last</h2>
     <table class="table table-striped table-bordered table-hover">
       <tr ng-repeat="result in filteredLastResults = (resultCtrl.lastResults | filter:resultCtrl.filter)">
-        <td>{{result.userName}} @ {{result.solutionHostName}} done in {{result.duration}}ms started at {{result.startTime}} (error: {{result.exception}}, response: {{result.response}}, validation: {{result.validation}})</td>
+        <td>
+          <p><strong>{{result.userName}}</strong></p>
+          <p>Done in <strong>{{result.duration}}ms</strong></p>
+          <p>Started at <em>{{result.startTime | timestamp}}</em></p>
+          <div ng-show="result.exception || result.validation" style="color: #770000">
+            <p ng-show="result.exception"><strong>Exception: {{result.exception}}</strong></p>
+            <p ng-show="result.validation"><strong>Validation: {{result.validation}}</strong></p>
+          </div>
+          <p ng-show="result.response">
+            Response: {{result.response}}
+          </p>
       </tr>
       <tr ng-hide="filteredLastResults.length">
         <td>No results</td>
@@ -22,7 +32,17 @@
     <h2>Top</h2>
     <table class="table table-striped table-bordered table-hover">
       <tr ng-repeat="result in filteredTopResults = (resultCtrl.topResults | filter:resultCtrl.filter)">
-        <td>{{result.userName}} @ {{result.solutionHostName}} done in {{result.duration}}ms started at {{result.startTime}} (error: {{result.exception}}, response: {{result.response}}, validation: {{result.validation}})</td>
+        <td>
+          <p><strong>{{result.userName}}</strong></p>
+          <p>Done in {{result.duration}}ms </p>
+          <p>Started at {{result.startTime | timestamp}}</p>
+          <div ng-show="result.exception || result.validation">
+            <p ng-show="result.exception">Exception: {{result.exception}}</p>
+            <p ng-show="result.validation">Validation: {{result.validation}}</p>
+          </div>
+          <p ng-show="result.response">
+            Response: {{result.response}}
+          </p>
       </tr>
       <tr ng-hide="filteredTopResults.length">
         <td>No results</td>
