fixed query URL + added selected page styles

--- a/src/ratpack/public/css/sidebar.css
+++ b/src/ratpack/public/css/sidebar.css
@@ -70,6 +70,12 @@
     background: rgba(255,255,255,0.2);
 }
 
+.sidebar-nav li a.selected {
+  background-color: #770000;
+  font-weight: 600;
+  color: white;
+}
+
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
