--- a/src/ratpack/public/views/queue/queue.html
+++ b/src/ratpack/public/views/queue/queue.html
@@ -17,7 +17,7 @@
           <button type="submit" class="btn-u btn-u-red">Send</button>
         </form>
         <p>NOTE: The following URL will be requested by the test: </p>
-        <p><strong>http://{{ queueCtrl.solutionHostName }}?q=Linux+Ubuntu+MacOs</strong></p>
+        <p><strong>http://{{ queueCtrl.solutionHostName }}?query=Linux+Ubuntu+MacOs</strong></p>
       </div>
     </div>
   </div>
