--- a/src/ratpack/public/css/style.css
+++ b/src/ratpack/public/css/style.css
@@ -1,14 +1,13 @@
-body
-	{
-		background-color:		#f7f7f7;
-		background-image:		-moz-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),		url('/images/bg01.png');
-		background-image:		-webkit-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),	url('/images/bg01.png');
-		background-image:		-o-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),		url('/images/bg01.png');
-		background-image:		-ms-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),		url('/images/bg01.png');
-		background-image:		linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),			url('/images/bg01.png');
-		background-position:	top left,														top left;
-		background-repeat:		repeat-x,														repeat;
-		background-size:		100% 30em,														auto;
+body {
+  background-color:  #f7f7f7;
+  background-image:  -moz-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),  url('/images/bg01.png');
+  background-image:  -webkit-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)), url('/images/bg01.png');
+  background-image:  -o-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),  url('/images/bg01.png');
+  background-image:  -ms-linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),  url('/images/bg01.png');
+  background-image:  linear-gradient(top, rgba(0,0,0,0.05), rgba(0,0,0,0)),   url('/images/bg01.png');
+  background-position: top left, top left;
+  background-repeat:  repeat-x, repeat;
+  background-size:  100% 30em, auto;
 }
 
 body,input,select,textarea {
