added multi-contest support

--- a/src/ratpack/public/views/rules/cloudopoly1.html
+++ b/src/ratpack/public/views/rules/cloudopoly1.html
@@ -1,3 +1,4 @@
+<h1><strong>Cloudopoly #1</strong></h1>
 <article class="markdown-body entry-content" itemprop="mainContentOfPage">
 <h1>
   <a id="user-content-w00t" class="anchor" href="#w00t" aria-hidden="true"><span class="octicon octicon-link"></span></a>W00t?</h1>
