--- a/src/ratpack/public/css/sidebar.css
+++ b/src/ratpack/public/css/sidebar.css
@@ -76,6 +76,12 @@
   color: white;
 }
 
+.sidebar-nav li.section {
+  background-color: #101010;
+  font-weight: 700;
+  color: white;
+}
+
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
   text-decoration: none;
