updated to show latest cloudopoly rules

--- a/src/ratpack/public/views/results/results.html
+++ b/src/ratpack/public/views/results/results.html
@@ -1,3 +1,5 @@
+<h1><strong>Currently disabled!</strong></h1>
+<!--
 <div class="row">
   <form class="form-inline" role="form" name="filterForm">
     <div class="form-group">
@@ -50,3 +52,4 @@
     </table>
   </div>
 </div>
+-->
