--- a/src/ratpack/public/views/queue/queue.html
+++ b/src/ratpack/public/views/queue/queue.html
@@ -1,3 +1,5 @@
+<h1><strong>Currently disabled!</strong></h1>
+<!--
 <div class="row">
   <div class="col-sm-6">
     <div class="panel panel-red margin-bottom-40">
@@ -39,3 +41,4 @@
     </table>
   </div>
 </div>
+-->
